# $Id$

2008-01-10	Konstantin V. Arkhipov

	* meta/: configurations without classes are now allowed;
	includes processing now goes before classes.

2008-01-08	Konstantin V. Arkhipov

	* meta/classes/MetaConfiguration.class.php: validation against
	meta.dtd implemented.

	* core/Cache/FileLocker.class.php: added forgotten file dropping in
	drop().

2008-01-07	Konstantin V. Arkhipov

	* main/DAOs/Workers/: getResult() fixed.

	* main/DAOs/Workers/VoodooDaoWorker.class.php: CacheSegmentHandler is
	the default handler now.

	* main/DAOs/Workers/CommonDaoWorker.class.php,
	main/DAOs/Workers/TransparentDaoWorker.class.php: getListByIds() now
	uses CachePeer's getList().

	* core/Cache/: getList() implemented in CachePeer and
	two memcached childs.

	* main/DAOs/Workers/NullDaoWorker.class.php: getListByIds() now
	behaves like in all others DAO workers.

	* main/Utils/ClassUtils.class.php: isClassImplements implemented, to
	avoid SPL's class_implements dependency.

2008-01-06	Konstantin V. Arkhipov

	* 1.0.0 released.

2007-12-29	Ivan Y. Khvostishkov

	* core/Form/Form.class.php: getInnerErrors() for PrimitiveForm.

2007-12-27	Vladimir A. Altuchov

	* main/Markup/Feed/: Category attribute added.

2007-12-25	Ivan Y. Khvostishkov

	* main/Net/HttpUrl.class.php: setHttpHost() - setter for Host-like
	values, as described in rfc2616, sec. 14.23.

2007-12-25	Konstantin V. Arkhipov

	* global.inc.php.tpl: ONPHP_TEMP_PATH now defaults to
	sys_get_temp_dir(), ONPHP_CLASS_CACHE now defaults to ONPHP_TEMP_PATH.

2007-12-23	Konstantin V. Arkhipov

	* main/DAOs/Handlers/CacheSegmentHandler.class.php: new experimental
	segment handler implemented.

	* core/Cache/: append() added in CachePeer and implemented in it's
	available childs.

2007-12-20	Dmitry E. Demidov

	* main/Flow/MultiPrefixPhpViewResolver.class.php: added
	method viewExists.

2007-12-18	Dmitry E. Demidov

	* main/Flow/MultiPrefixPhpViewResolver.class.php: added
	method addFirstPrefix.

2007-12-11	Dmitry E. Demidov
